# profilecore

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/parser/: Dockerfile  README.md  pyproject.toml
apps/parser/src/profilecore_parser/: anthropic_client.py  linkedin.py  main.py  openai_client.py  repository.py  schema.py  settings.py  text_extraction.py  worker.py
apps/parser/src/profilecore_parser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/parser/tests/: test_anthropic_client.py  test_linkedin.py  test_openai_client.py  test_repository.py  test_text_extraction.py  test_worker.py
apps/web/: Dockerfile  next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/components/: chat-panel.tsx  delete-profile-button.tsx  history-back-button.tsx  profile-tabs.tsx  (+3 more)
apps/web/lib/: chat-markdown.tsx  data.ts  env.ts  errors.ts  openai.ts  profile-ui.ts  rate-limit.ts  request-context.ts  storage.ts  supabase.ts
apps/web/tests/: chat-markdown.test.ts  openai.test.ts  profile-ui.test.ts  storage.test.ts
docs/: api-reference.mdx  architecture.mdx  contributor-guide.mdx  product-vision.mdx  profile-ui-improvement-plan.mdx  setup.mdx  troubleshooting.mdx
fixtures/linkedin/: README.md  sample-linkedin-profile.json  sample-linkedin-profile.txt
supabase/migrations/: 20260316110000_init_profilecore.sql
(+16 files in other folders)
