[project]
name = "profilecore-parser"
version = "0.1.0"
description = "FastAPI parser worker for ProfileCore"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.11",
  "uvicorn>=0.34.0",
  "pydantic-settings>=2.8.1",
  "supabase>=2.15.0",
  "PyMuPDF>=1.25.3",
  "jsonschema>=4.23.0",
  "openai>=1.68.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "ruff>=0.11.0",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

